<resources>
    <string name="app_name">Pokemon</string>
    <string name="about">About</string>
    <string name="_000">#000</string>
    <string name="pokemon">Pokemon</string>
    <string name="species">Species</string>
    <string name="weight">Weight</string>
    <string name="base_stats">Base Stats</string>
    <string name="hp">HP</string>
    <string name="atk">ATK</string>
    <string name="def">DEF</string>
    <string name="spd">SPD</string>
</resources>